[gd_scene load_steps=11 format=2]

[ext_resource path="res://misc/theme_main.tres" type="Theme" id=3]
[ext_resource path="res://misc/fnt_yuge.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/hats.gd" type="Script" id=5]
[ext_resource path="res://ui/player_large.png" type="Texture" id=6]
[ext_resource path="res://misc/mat_opacifier.tres" type="Material" id=7]
[ext_resource path="res://misc/fnt_raleway_tiny.tres" type="DynamicFont" id=8]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.141176, 0.133333, 0.203922, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.556863, 0.321569, 0.321569, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.87451, 0.243137, 0.137255, 1 )

[sub_resource type="InputEventAction" id=3]
action = "attack"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="hats" type="Control"]
margin_right = 512.0
margin_bottom = 288.0
focus_mode = 2
theme = ExtResource( 3 )
script = ExtResource( 5 )

[node name="underpanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="bac" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="panel" type="Panel" parent="bac"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="title" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -120.0
margin_bottom = -56.0
custom_fonts/font = ExtResource( 4 )
text = "/!\\ HATS /!\\"
align = 1

[node name="list_holder" type="Panel" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -56.0
margin_right = 8.0
margin_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="sprites" type="HBoxContainer" parent="list_holder"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="hatlesness" type="Label" parent="list_holder"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "No hats :("
align = 1
valign = 1

[node name="preview" type="Control" parent="list_holder"]
margin_left = 440.0
margin_top = 104.0
margin_right = 504.0
margin_bottom = 168.0
grow_vertical = 0

[node name="player" type="TextureRect" parent="list_holder/preview"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 6 )

[node name="name" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 128.0
margin_top = 8.0
margin_right = -128.0
margin_bottom = 32.0
text = "Hat Name"
align = 1
valign = 1

[node name="description" type="Label" parent="."]
material = ExtResource( 7 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 80.0
margin_top = 32.0
margin_right = -80.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 8 )
text = "The hat does a thing"
align = 1
autowrap = true

[node name="don" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = 96.0
margin_right = 128.0
margin_bottom = 120.0
focus_mode = 0
text = "DON"

[node name="doff" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 96.0
margin_right = -32.0
margin_bottom = 120.0
focus_mode = 0
text = "DOFF"

[node name="egress" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -320.0
margin_top = 96.0
margin_right = -192.0
margin_bottom = 120.0
shortcut = SubResource( 4 )
text = "EGRESS"

[connection signal="pressed" from="don" to="." method="_on_don_pressed"]
[connection signal="pressed" from="doff" to="." method="_on_doff_pressed"]
[connection signal="pressed" from="egress" to="." method="_on_egress_pressed"]
